# rust-bitvmx-client

./: .dockerignore  .env  .gitignore  COMMIT_MSG.txt  Cargo.toml  README.md  build.rs  docker-compose.yml  regresion-test.sh  ret2.txt  ret3.txt  run_union_example.sh  start.sh  test1.bat
.github/: pull_request_template.md
.github/scripts/: build-emulator.sh  quick-test.sh  run-isolated-tests.sh  run-tests.sh  test-isolation-locally.sh
.github/workflows/: test.yml  union-tests.yml  union_test_template.yml  union_tests.yml  union_tests_local.yml  union_tests_template.yml  union_tests_template_local-reference.yml  union_tests_template_local.yml
config/: allow_list.yaml  development.json  development.yaml  mainnet_op_1.yaml  mainnet_op_2.yaml  mainnet_op_3.yaml  mainnet_op_4.yaml  op_1.yaml  op_1_mainnet.yaml  op_1_testnet.yaml  op_2.yaml  op_2_mainnet.yaml  op_2_regtest.yaml  op_2_testnet.yaml  op_3.yaml  op_3_mainnet.yaml  op_3_regtest.yaml  op_3_testnet.yaml  op_4.yaml  op_4_mainnet.yaml  op_4_testnet.yaml  op_testnet_1.yaml  prover.json  prover.yaml  testnet_op_1.yaml  testnet_op_2.yaml  testnet_op_3.yaml  testnet_op_4.yaml  third.yaml  user_1.yaml  verifier.json  verifier.yaml  wallet.yaml  wallet_regtest.yaml  wallet_testnet.yaml
config/keys/: bitvmx.key  emulator.key  l2.key  op_1.key  op_3.key  op_4.key  prover.key  services.key
docker/: Dockerfile  Dockerfile.emulator  Dockerfile.zkp  README.md  bitcoind.docker-compose.yml  run.sh  run_emulator.sh  run_zkp.sh
docs/: bitvmx-architecture-c4.md
docs/union/: union-bridge-architecture-diagram.md  union-protocol-documentation.md
examples/: burn_and_get.rs  light-drp.rs  lockreq.rs  lockservice.rs  run.sh  single_run.rs
examples/bridge/: README.md  bitcoin.rs  committee.rs  log.rs  main.rs  pegin.rs
examples/cardinal/: burn_and_get.rs  common.rs  lockreq.rs  lockservice.rs  log.rs  main.rs
examples/union/: CHANGELOG.md  README.md  bitcoin.rs  committee.rs  dev.rs  log.rs  macros.rs  main.rs  member.rs  pegin.rs  request_pegin.rs  run-all.sh  run-example.sh  start.sh  union.rs
examples/union/covenants/: accept_pegin.rs  dispute_core.rs  mod.rs
examples/union/participants/: committee.rs  common.rs  member.rs  mod.rs  user.rs  wallet_helper.rs
examples/union/scripts/: kill-bitvmx-client.sh  run-all.sh  run-example.sh
examples/union/setup/: accept_pegin_setup.rs  advance_funds_setup.rs  dispute_channel_setup.rs  dispute_core_setup.rs  full_penalization_setup.rs  init_setup.rs  mod.rs  reject_pegin_setup.rs  user_take_setup.rs
examples/union/wallet/: helper.rs  master_wallet.rs  master_wallet_examples.rs  master_wallet_info.rs  mod.rs
scripts/: build-emulator.sh  prepare_reg.bat  prepare_test.bat  run-tests.sh  testnet.py
src/: api.rs  bitvmx.rs  client.rs  collaborate.rs  comms.rs  comms_helper.rs  config.rs  errors.rs  helper.rs  keychain.rs  leader_broadcast.rs  lib.rs  main.rs  message_queue.rs  p2p_helper.rs  ping_helper.rs  shutdown.rs  signature_verifier.rs  spv_proof.rs  timestamp_verifier.rs  types.rs
src/bitcoin/: bitcoind.rs  mod.rs  rpc.rs
src/client/: input.rs  mod.rs  repl.rs
src/docker/: Dockerfile  cleanup.sh  entrypoint.sh  prover.sh  regtest.conf  verifier.sh
src/keys/: keychain.rs
src/p2p/: mod.rs  p2p_manager.rs  p2p_parser.rs
src/program/: dispute.rs  lock.rs  mod.rs  participant.rs  program.rs  program_v2.rs  protocol_handler.rs  session.rs  slot.rs  state.rs  variables.rs  witness.rs
src/program/protocols/: aggregated_key.rs  claim.rs  collaboration.rs  cooperative_signature.rs  dispute.rs  dispute_challenge.rs  input_handler.rs  light-drp.rs  lock.rs  mod.rs  protocol_handler.rs  protocol_type.rs  slot.rs  transfer.rs
src/program/protocols/cardinal/: lock.rs  lock_config.rs  mod.rs  slot.rs  slot_config.rs  transfer.rs  transfer_config.rs
src/program/protocols/dispute/: challenge.rs  config.rs  execution.rs  input_handler.rs  mod.rs  tx_news.rs
src/program/protocols/union/: CHANGELOG.md  accept_pegin.rs  advance_funds.rs  common.rs  constants.rs  dispute_core.rs  dispute_core_claim_gate.rs  errors.rs  events.rs  full_penalization.rs  init.rs  macros.rs  mod.rs  multiparty_penalization.rs  operator_take.rs  pairwise_penalization.rs  reject_pegin.rs  scripts.rs  sequential_dispute_core.rs  take.rs  types.rs  user_take.rs
src/program/protocols/union/events/: events.rs
src/program/protocols/union/tests/: README.md  TEST_GUIDE.md  common_utilities.rs  indexed_names.rs  mod.rs  run_union_tests.sh
src/program/protocols/union/tests/helpers/: mod.rs  test_assertions.rs  test_enums.rs  test_generators.rs  test_helpers.rs  test_validators.rs
src/program/protocols/union/tests/scripts/: run_union_tests.sh
src/program/protocols/union/tests/unit/: common_utilities.rs  fee_estimation.rs  indexed_names.rs  mod.rs  output_builders.rs
src/program/setup/: exchange_config.rs  mod.rs  setup_engine.rs  setup_step.rs  step_phase.rs
src/program/setup/steps/: keys_step.rs  mod.rs  nonces_step.rs  signatures_step.rs
src/program/setup/template_steps/: keys_step.rs  nonces_step.rs  signatures_step.rs
tests/: .env  Dockerfile  aggregated_key.rs  cleanup.sh  client.rs  collaboration_v2.rs  cooperative_signature.rs  docker-compose.yml  entrypoint.sh  fixtures.rs  fulltest.rs  independent.rs  integration.rs  locktest.rs  message_queue_test.rs  op_1.conf  run_sequential_tests.sh  shutdown_policy.rs  slottest.rs  test_bitcoin_coordintor.rs  test_gc_drp.rs  test_gnova_e2e.rs  transfertetst.rs  winternitz.rs
tests/common/: dispute.rs  helper.rs  mod.rs
tests/docker/: Dockerfile  README.md  cleanup.sh  docker-compose.yml  entrypoint.sh
tests/utils/: bitcoind.rs
verifiers/: add-test-with-const-post.yaml  add-test-with-const-pre.yaml  add-test-with-const.yaml  add-test-with-previous-wots.yaml  add-test.elf  add-test.yaml  cardinal-verifier.elf  cardinal-verifier.yaml
