[package]
name = "bitvmx-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bitcoin = { version = "0.32.4", features = ["std", "rand-std"] }
clap = { version = "4.5.10", features = ["derive"] }
comfy-table = "7.1.3"
config = "0.15.11"
hex = "0.4.3"
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.96"
shlex = "1.3.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
url = { version = "2.5.4" }
chrono = "0.4.31"
tokio = { version = "1.40.0", features = ["sync"] }
sha2 = "0.10"
enum_dispatch = { version = "0.3.13" }
ctrlc = "3.2.5"

bitcoincore-rpc = { version = "0.19.0" }
bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script/", branch = "bitvmx" }
bitcoin-scriptexec = { git = "https://github.com/FairgateLabs/rust-bitcoin-scriptexec/", branch = "bitvmx" }

bitvmx-key-manager = { path = "../rust-bitvmx-key-manager" }
bitvmx-protocol-builder = { path = "../rust-bitvmx-protocol-builder" }
bitcoin-coordinator = { path = "../rust-bitcoin-coordinator" }
#p2p_handler = { path = "../rust-p2p-handler" }
#p2p_handler = { path = "../rust-fakep2p", features = [ "memory-impl", ], default-features = false }
p2p_handler = { path = "../rust-fakep2p" }
rust-bitvmx-storage-backend = { path = "../rust-bitvmx-storage-backend" }
bitvmx-settings = { path = "../rust-bitvmx-settings" }
bitvmx-bitcoin-rpc = { path = "../rust-bitvmx-bitcoin-rpc" }
bitvmx-broker = { path = "../rust-bitvmx-broker", features = [
    "storagebackend",
] }
bitcoind = { path = "../rust-bitcoind" }
emulator = { path = "../BitVMX-CPU/emulator" }

bitvmx-job-dispatcher-types = { path = "../rust-bitvmx-job-dispatcher/jobtypes" }

musig2 = { version = "0.2.3", features = ["serde", "rand"] }

[dev-dependencies]
bollard = "0.11.0"
futures-util = "0.3"
bitcoind = { path = "../rust-bitcoind" }

bitvmx-transaction-monitor = { path = "../rust-bitvmx-transaction-monitor" }
bitvmx-job-dispatcher = { path = "../rust-bitvmx-job-dispatcher/dispatcher", features = [
    "emulator",
] }
