[package]
name = "bitvmx-client"
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bitcoin = { version = "0.32.6", features = ["std", "rand-std"] }
clap = { version = "4.5.10", features = ["derive"] }
comfy-table = "7.1.3"
config = "0.15.11"
console = "0.15.4"
hex = "0.4.3"
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.96"
shlex = "1.3.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "v5"] }
url = { version = "2.5.4" }
chrono = "0.4.31"
tokio = { version = "1.40.0", features = ["sync"] }
sha2 = "0.10"
enum_dispatch = { version = "0.3.13" }
ctrlc = "3.2.5"

bitcoincore-rpc = { version = "0.19.0" }
bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script/", branch = "bitvmx" }
bitcoin-scriptexec = { git = "https://github.com/FairgateLabs/rust-bitcoin-scriptexec/", branch = "bitvmx" }

bitvmx-key-manager = { git = "https://github.com/FairgateLabs/rust-bitvmx-key-manager.git", branch = "v.0.0.2" }
bitvmx-protocol-builder = { git = "https://github.com/FairgateLabs/rust-bitvmx-protocol-builder.git", branch = "v.0.0.2" }
bitcoin-coordinator = { git = "https://github.com/FairgateLabs/rust-bitcoin-coordinator.git", branch = "v.0.0.2" }
bitvmx-operator-comms = { git = "https://github.com/FairgateLabs/rust-bitvmx-operator-comms.git", branch = "v.0.0.2" }
rust-bitvmx-storage-backend = { git = "https://github.com/FairgateLabs/rust-bitvmx-storage-backend.git", branch = "v.0.0.2" }
bitvmx-settings = { git = "https://github.com/FairgateLabs/rust-bitvmx-settings.git", branch = "v.0.0.2" }
bitvmx-bitcoin-rpc = { git = "https://github.com/FairgateLabs/rust-bitvmx-bitcoin-rpc.git", branch = "v.0.0.2" }
bitvmx-broker = { git = "https://github.com/FairgateLabs/rust-bitvmx-broker.git", branch = "v.0.0.2", features = [
    "storagebackend",
] }
emulator = { git = "https://github.com/FairgateLabs/BitVMX-CPU", branch = "v.0.0.2" }
bitcoin-script-riscv = { git = "https://github.com/FairgateLabs/BitVMX-CPU", branch = "v.0.0.2" }
bitvmx-cpu-definitions = { git = "https://github.com/FairgateLabs/BitVMX-CPU", branch = "v.0.0.2" }
bitcoin-script-stack = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-stack", features = [
    "interactive",
], branch = "v2" }

bitvmx-wallet = { git = "https://github.com/FairgateLabs/rust-bitvmx-wallet.git", branch = "v.0.0.2" }
bitvmx-job-dispatcher-types = { git = "https://github.com/FairgateLabs/rust-bitvmx-job-dispatcher", branch = "v.0.0.2", features = [
    "emulator",
    "prover",
] }
bitvmx-job-dispatcher = { git = "https://github.com/FairgateLabs/rust-bitvmx-job-dispatcher", branch = "v.0.0.2" }


[dev-dependencies]
bollard = "0.11.0"
futures-util = "0.3"
bitcoind = { git = "https://github.com/FairgateLabs/rust-bitcoind.git", branch = "v.0.0.2" }
reqwest = "0.12.23"

zk-result = { git = "https://github.com/FairgateLabs/rust-bitvmx-zk-proof.git", branch = "v.0.0.2" }
[features]
default = ["cardinal", "union"]
cardinal = []
union = []
testpanic = []

[[example]]
name = "union"
path = "examples/union/main.rs"
required-features = ["union"]

[[example]]
name = "cardinal"
path = "examples/cardinal/main.rs"
required-features = ["cardinal"]
