[package]
name = "bitvmx-client"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bitcoin = { version = "0.32.6", features = ["std", "rand-std"] }
clap = { version = "4.5.10", features = ["derive"] }
comfy-table = "7.1.3"
config = "0.15.11"
console = "0.15.4"
hex = "0.4.3"
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.96"
shlex = "1.3.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "v5"] }
url = { version = "2.5.4" }
chrono = "0.4.31"
tokio = { version = "1.40.0", features = ["sync"] }
sha2 = "0.10"
signature = "2.2"
rsa = "0.9"
enum_dispatch = { version = "0.3.13" }
ctrlc = "3.2.5"

bitcoincore-rpc = { version = "0.19.0" }
bitcoin-script = { git = "https://github.com/FairgateLabs/rust-bitcoin-script/", branch = "bitvmx" }
bitcoin-scriptexec = { git = "https://github.com/FairgateLabs/rust-bitcoin-scriptexec/", branch = "bitvmx" }

bitvmx-key-manager = { git = "https://github.com/FairgateLabs/rust-bitvmx-key-manager.git", tag = "v0.5.0" }
bitvmx-protocol-builder = { git = "https://github.com/FairgateLabs/rust-bitvmx-protocol-builder.git", tag = "v0.5.0" }
bitcoin-coordinator = { git = "https://github.com/FairgateLabs/rust-bitcoin-coordinator.git", tag = "v0.5.0" }
bitvmx-operator-comms = { git = "https://github.com/FairgateLabs/rust-bitvmx-operator-comms.git", tag = "v0.5.0" }
rust-bitvmx-storage-backend = { git = "https://github.com/FairgateLabs/rust-bitvmx-storage-backend.git", tag = "v0.5.0" }
bitvmx-settings = { git = "https://github.com/FairgateLabs/rust-bitvmx-settings.git", tag = "v0.5.0" }
bitvmx-bitcoin-rpc = { git = "https://github.com/FairgateLabs/rust-bitvmx-bitcoin-rpc.git", tag = "v0.5.0" }
bitvmx-broker = { git = "https://github.com/FairgateLabs/rust-bitvmx-broker.git", features = [
    "storagebackend",
] , tag = "v0.5.0" }
emulator = { git = "https://github.com/FairgateLabs/BitVMX-CPU", tag = "v0.5.0" }
bitcoin-script-riscv = { git = "https://github.com/FairgateLabs/BitVMX-CPU", tag = "v0.5.0" }
bitvmx-cpu-definitions = { git = "https://github.com/FairgateLabs/BitVMX-CPU", tag = "v0.5.0" }
bitcoin-script-stack = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-stack", features = [
    "interactive",
], branch = "v2" }

bitvmx-wallet = { git = "https://github.com/FairgateLabs/rust-bitvmx-wallet.git", tag = "v0.5.0" }
bitvmx-job-dispatcher-types = { git = "https://github.com/FairgateLabs/rust-bitvmx-job-dispatcher", features = [
    "emulator",
    "prover",
] , tag = "v0.5.0" }
bitvmx-job-dispatcher = { git = "https://github.com/FairgateLabs/rust-bitvmx-job-dispatcher", tag = "v0.5.0" }
redact = { version = "0.1", features = ["serde", "zeroize"] }


[dev-dependencies]
bollard = "0.11.0"
futures-util = "0.3"
bitcoind = { git = "https://github.com/FairgateLabs/rust-bitcoind.git", tag = "v0.5.0" }
reqwest = "0.12.23"

zk-result = { git = "https://github.com/FairgateLabs/rust-bitvmx-zk-proof.git", tag = "v0.5.0" }
[features]
default = ["cardinal", "union"]
cardinal = []
union = []
testpanic = []

[[example]]
name = "union"
path = "examples/union/main.rs"
required-features = ["union"]

[[example]]
name = "cardinal"
path = "examples/cardinal/main.rs"
required-features = ["cardinal"]
